--- a/fullstack-thirdparty/src/main/resources/application-prod.properties
+++ b/fullstack-thirdparty/src/main/resources/application-prod.properties
@@ -1,3 +1,8 @@
+# ==================================================\u57FA\u7840\u914D\u7F6E beg
+server.port=8080
+spring.thymeleaf.cache=true
+# ==================================================\u57FA\u7840\u914D\u7F6E end
+#
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
 spring.cloud.nacos.discovery.server-addr=nacos.fsmall-project:8848
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
