--- a/fullstack-cart/k8s/k8s-deploy.yaml
+++ b/fullstack-cart/k8s/k8s-deploy.yaml
@@ -20,6 +20,11 @@ spec:
           image: ${IMAGE}
           ports:
             - containerPort: 8080
+          env:
+            - name: JAVA_TOOL_OPTIONS
+              value: >-
+                -Xms128m -Xmx128m -Xmn64m -Xss228k -XX:MetaspaceSize=64m
+                -Dspring.profiles.active=prod
           resources:
             requests:
               # 1核心的CPU=1000m
@@ -27,13 +32,19 @@ spec:
               memory: 10Mi
             limits:
               cpu: 500m
-              memory: 100Mi
+              memory: 500Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: IfNotPresent
-          env:
-            - name: JAVA_TOOL_OPTIONS
-              value: "-Xms100m -Xmx100m -Xmn64m -Xss228k -XX:MetaspaceSize=64m -Dspring.profiles.active=prod"
+          # 就绪状态检查
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 150
+            periodSeconds: 10
+            timeoutSeconds: 3
           # 存活状态检查
           livenessProbe:
             httpGet:
@@ -41,7 +52,7 @@ spec:
               port: 8080
               scheme: HTTP
             # pod 创建10s后启动第一次探测
-            initialDelaySeconds: 30
+            initialDelaySeconds: 150
             # 每隔10s启动一次探测
             periodSeconds: 10
             # 超时时间3s
@@ -50,15 +61,6 @@ spec:
             successThreshold: 1
             # 连续5次失败，则判定容器不健康，默认3次
             failureThreshold: 5
-          # 就绪状态检查
-          readinessProbe:
-            httpGet:
-              path: /actuator/health/readiness
-              port: 8080
-              scheme: HTTP
-            initialDelaySeconds: 50
-            periodSeconds: 10
-            timeoutSeconds: 3
       restartPolicy: Always
       # 优雅停机等待时间
       terminationGracePeriodSeconds: 30
