--- a/fullstack-gateway/src/main/resources/application.properties
+++ b/fullstack-gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 seata.enabled=false
 # \u914D\u7F6E\u4E2D\u5FC3\uFF0Cimport[index]\u7D22\u5F15\u9AD8\u7684\u4F18\u5148\u7EA7\u9AD8\uFF01\uFF01\uFF01
-spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.config.server-addr=192.168.32.116:31748
 spring.cloud.nacos.config.namespace=fullstack-gateway
 spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-gateway.yml?refresh=true&group=dev
@@ -57,7 +57,7 @@ spring.cloud.gateway.routes[13].predicates[0]=Host=seckill.fsmall.com
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
 spring.cloud.sentinel.filter.enabled=true
-spring.cloud.sentinel.transport.dashboard=repo.emon.vip:8791
+spring.cloud.sentinel.transport.dashboard=192.168.32.116:30106
 spring.cloud.sentinel.datasource.gw_flow.nacos.rule-type=gw_flow
 spring.cloud.sentinel.datasource.gw_flow.nacos.server-addr=${spring.cloud.nacos.config.server-addr}
 spring.cloud.sentinel.datasource.gw_flow.nacos.group-id=SENTINEL_GROUP
