--- a/fullstack-gateway/src/main/resources/application.properties
+++ b/fullstack-gateway/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-seata.enabled=false
+# ==================================================\u57FA\u7840\u914D\u7F6E beg
+#
+# ==================================================\u57FA\u7840\u914D\u7F6E end
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
 # \u914D\u7F6E\u4E2D\u5FC3\uFF0Cimport[index]\u7D22\u5F15\u9AD8\u7684\u4F18\u5148\u7EA7\u9AD8\uFF01\uFF01\uFF01
 spring.cloud.nacos.config.server-addr=192.168.32.116:31748
 spring.cloud.nacos.config.namespace=fullstack-gateway
 spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-gateway.yml?refresh=true&group=dev
 spring.config.import[1]=nacos:other.yml?refresh=true&group=dev
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
+#
+# ==================================================\u8DEF\u7531\u89C4\u5219 beg
 # \u8DEF\u7531\u89C4\u5219
 spring.cloud.gateway.routes[0].id=test_route
 spring.cloud.gateway.routes[0].uri=https://www.baidu.com
@@ -54,6 +60,12 @@ spring.cloud.gateway.routes[12].predicates[0]=Host=member.fsmall.com
 spring.cloud.gateway.routes[13].id=fullstack-host-seckill
 spring.cloud.gateway.routes[13].uri=lb://fullstack-seckill
 spring.cloud.gateway.routes[13].predicates[0]=Host=seckill.fsmall.com
+# ==================================================\u8DEF\u7531\u89C4\u5219 end
+#
+# ==================================================seata beg
+seata.enabled=false
+# ==================================================seata end
+#
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
 spring.cloud.sentinel.filter.enabled=true
@@ -69,6 +81,7 @@ spring.cloud.sentinel.datasource.degrade.nacos.data-id=${spring.application.name
 # \u662F\u5426\u542F\u7528sentinel\u5BF9feign\u7684\u652F\u6301
 feign.sentinel.enabled=true
 # ==================================================sentinel end
+#
 # ==================================================zipkin beg
 ## zipkin\u670D\u52A1\u5668\u7684\u5730\u5740
 #spring.zipkin.base-url=http://repo.emon.vip:9411
