--- a/fullstack-gateway/src/main/resources/application.properties
+++ b/fullstack-gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # ==================================================\u57FA\u7840\u914D\u7F6E beg
-#
+#management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
 # \u914D\u7F6E\u4E2D\u5FC3\uFF0Cimport[index]\u7D22\u5F15\u9AD8\u7684\u4F18\u5148\u7EA7\u9AD8\uFF01\uFF01\uFF01
