--- a/fullstack-coupon/src/main/resources/application.properties
+++ b/fullstack-coupon/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
 spring.cloud.sentinel.filter.enabled=true
-spring.cloud.sentinel.transport.dashboard=repo.emon.vip:8791
+spring.cloud.sentinel.transport.dashboard=192.168.32.116:30106
 spring.cloud.sentinel.datasource.flow.nacos.rule-type=flow
 spring.cloud.sentinel.datasource.flow.nacos.server-addr=${spring.cloud.nacos.config.server-addr}
 spring.cloud.sentinel.datasource.flow.nacos.group-id=SENTINEL_GROUP
