--- a/fullstack-order/src/main/resources/application.properties
+++ b/fullstack-order/src/main/resources/application.properties
@@ -32,6 +32,7 @@ spring.cloud.nacos.discovery.server-addr=192.168.32.116:31748
 #
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
 spring.cloud.nacos.config.server-addr=192.168.32.116:31748
+spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-order.properties?refresh=true
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
 #
